force-app/main/default/objects/Shift/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <formula>EndTime - StartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>