force-app/main/default/objects/Shift/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>To Store date value of EndTime</inlineHelpText>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>