force-app/main/default/objects/Shift/fields/Local_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Local_End_Time__c</fullName>
    <label>Local End Time</label>
    <length>64</length>
    <type>Text</type>
</CustomField>