force-app/main/default/objects/Shift/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>to store only date of the Start date time</description>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>