force-app/main/default/objects/Shift/fields/SwapOverlap__c.field-meta.xml
<CustomField>
    <fullName>SwapOverlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SwapOverlap</label>
    <type>Checkbox</type>
</CustomField>