force-app/main/default/objects/Shift/validationRules/Do_Not_Allow_Duplicate_Shift_Swap.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Allow_Duplicate_Shift_Swap</fullName>
    <active>true</active>
    <description>This validation rule prevents a Resource Swap on a confirmed Shift, if the Resource to whom Shift is being assigned already has a Shift for that day</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status),&quot;Confirmed&quot;),
ISCHANGED(ServiceResourceId),
SwapOverlap__c
)</errorConditionFormula>
    <errorMessage>This Shift cannot be swapped as the selected Service Resource has a Shift created for this day already</errorMessage>
</ValidationRule>