force-app/main/default/objects/Shift/validationRules/Do_Not_Allow_Edit_On_Confirmed_Shifts.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Allow_Edit_On_Confirmed_Shifts</fullName>
    <active>true</active>
    <description>Make Shift Non Editable once the Status of the Shift is Confirmed</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status),&quot;Confirmed&quot;),
NOT(ISCHANGED(ServiceResourceId)))</errorConditionFormula>
    <errorMessage>Shifts in Confirmed Status cannot be updated</errorMessage>
</ValidationRule>