force-app/main/default/objects/Shift/validationRules/Do_Not_Allow_Multi_Day_Shifts.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Allow_Multi_Day_Shifts</fullName>
    <active>true</active>
    <description>Prevents creation of shifts spanning more than 1 day</description>
    <errorConditionFormula>DATEVALUE(StartTime) &lt;&gt; DATEVALUE(EndTime)</errorConditionFormula>
    <errorMessage>Shifts cannot span across multiple days, please ensure that the Start and End Times are  contained in the same day</errorMessage>
</ValidationRule>