force-app/main/default/objects/Shift/validationRules/Do_Not_Allow_Open_Shifts.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Allow_Open_Shifts</fullName>
    <active>true</active>
    <description>This validation rule ensure that Shifts are always created with a Service Resource</description>
    <errorConditionFormula>ISBLANK(ServiceResourceId)</errorConditionFormula>
    <errorMessage>Shifts cannot be created without a Service Resource</errorMessage>
</ValidationRule>