force-app/main/default/objects/Shift/listViews/All_Shifts.listView-meta.xml
<ListView>
    <fullName>All_Shifts</fullName>
    <columns>Name</columns>
    <columns>ServiceResource</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Shifts</label>
</ListView>