force-app/main/default/objects/Shift/listViews/My_Shifts.listView-meta.xml
<ListView>
    <fullName>My_Shifts</fullName>
    <columns>Name</columns>
    <columns>ServiceResource</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Mine</filterScope>
    <label>My Shifts</label>
</ListView>